build/html2rdf/tests/snapshots/test_cases__cases@rdfa1.1__html5__0197.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0197.html
---
@base <file:///0197.html> .
@prefix dc: <http://purl.org/dc/terms/> .
<http://www.example.org/me> dc:language "Ruby" .
