build/html2rdf/tests/snapshots/test_cases__cases@rdfa1.1__html5__0206.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0206.html
---
@base <file:///0206.html> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
xsd:maxExclusive a <owl:DatatypeProperty> .
